# simple-ethernet-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
include/: Ethernet.hpp  EthernetDriver.hpp  EthernetFrame.hpp  Protocol.hpp  ProtocolDevice.hpp  ProtocolHost.hpp
src/: Demo.cpp  EthernetDriver.cpp  EthernetFrame.cpp  Protocol.cpp  ProtocolDevice.cpp  ProtocolHost.cpp
tests/: TestDriver.cpp  TestFrame.cpp  TestProtocol.cpp  test.cpp  test_driver.cpp
